--- a/templates/visualCliente/con_mapa_provincia.html
+++ b/templates/visualCliente/con_mapa_provincia.html
@@ -3,6 +3,39 @@
 
 
 {% block scripts_extras_para_modificar_mapa %}
+{##}
+{#<script src="https://maps.google.com/maps/api/js?sensor=false"></script>#}
+{#    <script type="text/javascript">#}
+{#function showGoogleMaps(latitud,longitud)#}
+{#{#}
+{#    //Creamos el punto a partir de la latitud y longitud de una dirección:#}
+{#    var point = new google.maps.LatLng(latitud, longitud);#}
+{##}
+{#    //Configuramos las opciones indicando zoom, punto y tipo de mapa#}
+{#    var myOptions = {#}
+{#        zoom: 15,#}
+{#        center: point,#}
+{#        mapTypeId: google.maps.MapTypeId.ROADMAP#}
+{#    };#}
+{##}
+{#    //Creamos el mapa y lo asociamos a nuestro contenedor#}
+{#    var map = new google.maps.Map(document.getElementById("chartdiv"),  myOptions);#}
+{##}
+{#    //Mostramos el marcador en el punto que hemos creado#}
+{#    var marker = new google.maps.Marker({#}
+{#        position:point,#}
+{#        map: map,#}
+{#        title: "Nombre empresa - Calle Balmes 192, Barcelona"#}
+{#    });#}
+{# } #}
+{#if(LM.lista.length>0){#}
+{#    const e = LM.lista[0];#}
+{#    showGoogleMaps(e.latitud,e.longitud);#}
+{# } #}
+{#mostrarMapaOffLine=false;#}
+{#</script>#}
+
+
     <script>
 
 santiago ={ "type": "Feature", "geometry": { "type": "Polygon", "coordinates": [[[-75.3821, 19.8825], [-75.3943, 19.8835], [-75.4276, 19.8907], [-75.4375, 19.8957], [-75.4444, 19.8967], [-75.4556, 19.8855], [-75.4618, 19.8825], [-75.4889, 19.8791], [-75.5209, 19.8796], [-75.5509, 19.8852], [-75.5716, 19.8967], [-75.6047, 19.892], [-75.6456, 19.9126], [-75.687, 19.9404], [-75.7218, 19.9575], [-75.7437, 19.9599], [-75.8153, 19.9575], [-75.8343, 19.9598], [-75.8734, 19.9696], [-75.8938, 19.9718], [-75.9321, 19.9677], [-75.9522, 19.9622], [-75.9655, 19.9544], [-75.9801, 19.9524], [-76.112, 19.9825], [-76.2023, 19.9923], [-76.2482, 19.9906], [-76.328, 19.9702], [-76.3661, 19.965], [-76.4387, 19.965], [-76.4603, 19.9621], [-76.5023, 19.9484], [-76.5244, 19.9439], [-76.6516, 19.9511], [-76.7811, 19.9407], [-76.8017, 19.9307], [-76.8236, 19.9316], [-76.8456, 19.9363], [-76.8664, 19.9377], [-76.8818, 19.9314], [-76.9141, 19.9066], [-76.9353, 19.8967], [-76.9589, 19.8911], [-77.0346, 19.8878], [-77.0351, 19.9106], [-77.0472, 19.9328], [-77.0478, 19.9389], [-77.0391, 19.9415], [-76.9809, 19.9475], [-76.9686, 19.953], [-76.9307, 20.0011], [-76.9185, 20.005], [-76.8946, 20.0064], [-76.8806, 20.0053], [-76.8587, 20.0056], [-76.8432, 20.0083], [-76.8335, 20.0124], [-76.817, 20.0286], [-76.8007, 20.0379], [-76.7846, 20.0232], [-76.7744, 20.0195], [-76.7628, 20.0113], [-76.7539, 20.0183], [-76.7449, 20.0226], [-76.7259, 20.0272], [-76.72, 20.0273], [-76.7052, 20.013], [-76.691, 20.0059], [-76.6689, 19.9998], [-76.6547, 19.9993], [-76.637, 20.0019], [-76.6135, 20.0022], [-76.61, 20.0041], [-76.6045, 20.0145], [-76.5904, 20.0101], [-76.5625, 20.0038], [-76.5556, 20.0055], [-76.5543, 20.0102], [-76.5622, 20.0304], [-76.5637, 20.0388], [-76.5571, 20.0426], [-76.5288, 20.0381], [-76.5054, 20.0367], [-76.4887, 20.0395], [-76.4624, 20.0512], [-76.4474, 20.0611], [-76.4186, 20.0867], [-76.4083, 20.1053], [-76.4118, 20.1895], [-76.4196, 20.2311], [-76.4132, 20.2348], [-76.3891, 20.2587], [-76.3904, 20.2763], [-76.3695, 20.3566], [-76.3632, 20.3666], [-76.3555, 20.3729], [-76.3298, 20.3725], [-76.3081, 20.3686], [-76.2933, 20.3705], [-76.29, 20.3773], [-76.2882, 20.3913], [-76.283, 20.3998], [-76.2723, 20.4116], [-76.2689, 20.4183], [-76.2675, 20.4361], [-76.2713, 20.4546], [-76.2703, 20.4591], [-76.2584, 20.4611], [-76.2483, 20.4552], [-76.2409, 20.4438], [-76.2419, 20.4256], [-76.2309, 20.3975], [-76.2273, 20.3933], [-76.2195, 20.3939], [-76.2056, 20.4044], [-76.1797, 20.4376], [-76.1554, 20.4389], [-76.1382, 20.4369], [-76.1163, 20.4285], [-76.1068, 20.4303], [-76.1071, 20.4241], [-76.1148, 20.4083], [-76.1113, 20.4006], [-76.0905, 20.4206], [-76.0844, 20.442], [-76.0817, 20.4644], [-76.0883, 20.4795], [-76.0903, 20.4889], [-76.0969, 20.496], [-76.0945, 20.4994], [-76.079, 20.5092], [-76.0613, 20.5227], [-76.0434, 20.5296], [-76.0419, 20.5414], [-76.0514, 20.5661], [-76.0467, 20.5736], [-76.033, 20.5679], [-75.9856, 20.5348], [-75.9762, 20.5201], [-75.9805, 20.5097], [-75.9698, 20.503], [-75.9401, 20.5016], [-75.9308, 20.4978], [-75.9317, 20.491], [-75.9406, 20.4771], [-75.9298, 20.4671], [-75.9001, 20.4481], [-75.8836, 20.444], [-75.8794, 20.4278], [-75.873, 20.4183], [-75.8563, 20.4101], [-75.8247, 20.4076], [-75.7524, 20.439], [-75.7331, 20.4421], [-75.7013, 20.4379], [-75.6588, 20.4415], [-75.6156, 20.4698], [-75.6096, 20.486], [-75.6158, 20.5], [-75.6142, 20.5071], [-75.6092, 20.5118], [-75.5826, 20.4995], [-75.5705, 20.5052], [-75.5554, 20.5164], [-75.5317, 20.5402], [-75.5116, 20.5509], [-75.5018, 20.5505], [-75.4858, 20.5385], [-75.4672, 20.533], [-75.4234, 20.5408], [-75.4111, 20.5409], [-75.3927, 20.5475], [-75.3901, 20.5376], [-75.3934, 20.5131], [-75.3967, 20.507], [-75.4072, 20.5023], [-75.4168, 20.4856], [-75.4246, 20.4804], [-75.4171, 20.4689], [-75.4015, 20.4561], [-75.3755, 20.4229], [-75.3848, 20.4157], [-75.3894, 20.4073], [-75.3985, 20.4034], [-75.4166, 20.4091], [-75.4209, 20.4047], [-75.423, 20.3896], [-75.427, 20.3815], [-75.437, 20.3672], [-75.46, 20.3515], [-75.4725, 20.3467], [-75.4791, 20.34], [-75.4646, 20.3111], [-75.4621, 20.2946], [-75.4635, 20.2623], [-75.4652, 20.2569], [-75.4733, 20.25], [-75.4805, 20.2382], [-75.481, 20.2273], [-75.4753, 20.2034], [-75.4627, 20.1714], [-75.4505, 20.1615], [-75.4512, 20.1349], [-75.4481, 20.1235], [-75.4321, 20.117], [-75.4288, 20.1036], [-75.4333, 20.0947], [-75.4569, 20.0835], [-75.4688, 20.0697], [-75.4897, 20.0617], [-75.4883, 20.0246], [-75.4837, 20.0095], [-75.4705, 19.9889], [-75.4643, 19.9818], [-75.4428, 19.9628], [-75.3821, 19.8825]]] }, "properties": { "id": "CU-13", "name": "Santiago de Cuba", "CNTRY": "Cuba", "TYPE": "Provincia", "TYPE_EN": "Province" }, "id": "CU-13" };
@@ -57,7 +90,6 @@ return santiago;
 
 provincia=getProvinciaMap("{{nombreProvincia}}");
     </script>
-{#    {% block script_definir_provincia %}  {% endblock %}#}
 
     {% endblock %}
 
