--- a/templates/INSTITUCIONES_CIENTIFICAS/institucioncientifica_detail.html
+++ b/templates/INSTITUCIONES_CIENTIFICAS/institucioncientifica_detail.html
@@ -1,6 +1,6 @@
 {% extends "visualCliente/con_mapa_provincia.html" %}
 {% load static %}
-
+{% load poll_extras %}
 {% block titulo %}
     Industria Citífica
 {% endblock %}
@@ -103,6 +103,16 @@
 
               <div class="sidebar-item categories">
                 <h3 class="sidebar-title">Ubicación</h3>
+
+{#                  <iframe#}
+{#        src="https://map.positionstack.com/export/embed.html?bbox={{ b|numeroConComa }},{{ a|numeroConComa }},{{ d|numeroConComa }},{{ c|numeroConComa }}&layer=mapnik&marker={{ latitud|numeroConComa }},{{ longitud|numeroConComa }}"#}
+{#        width="600" height="450" style="border:0;"#}
+{#        allowfullscreen="" loading="lazy"#}
+{#        referrerpolicy="no-referrer-when-downgrade">#}
+{##}
+{#</iframe>#}
+
+
                   <div class="mt-3" id="chartdiv" style="
                 width: 100%;
             height: 100px;">
@@ -213,14 +223,25 @@
 
 {% endblock%}
 
-{#{% block script_definir_provincia %}#}
-{##}
-{#    <script>#}
-{#    provincia=getProvinciaMap("{{object.provincia.nombre}}");#}
-{#    </script>#}
-{#{% endblock %}#}
+
 
 {% block scripts_extras %}
+<script>
+{#fetch('https://api.positionstack.com/v1/forward?access_key=477c3c2370d1f711a7d1c3c79c72e685&query=1600 Pennsylvania Ave NW - Washington&limit=1')#}
+{#  .then(response => response.json())#}
+{#  .then(data => console.log(data));#}
+{##}
+{#$.ajax({#}
+{#    url: 'https://api.positionstack.com/v1/forward',#}
+{#    data: {#}
+{#      access_key: '477c3c2370d1f711a7d1c3c79c72e685',#}
+{#      query: '1600 Pennsylvania Ave NW - Washington',#}
+{#      limit: 1#}
+{#    }#}
+{#  }).done(function(data) {#}
+{#    console.log(JSON.parse(data));#}
+{#  });#}
 
+</script>
 
 {% endblock%}
