--- a/templates/visualCliente/con_puntos_en_mapa.html
+++ b/templates/visualCliente/con_puntos_en_mapa.html
@@ -3,7 +3,10 @@
 {% load poll_extras %}
 
 {% block scripts_extras_dos %}
-
+<form id="myFormIr" method="get" style="display:none;">
+ {% csrf_token %}
+  <input type="submit">
+</form>
 
     <script src="{% static 'lib/amcharts5/index.js' %}"></script>
 <script src="{% static 'lib/amcharts5/map.js' %}"></script>
@@ -12,18 +15,19 @@
 
     <script>
     class PuntoEnElMapa{
-        constructor(latitud,longitud,textoAMostrar){
+        constructor(latitud,longitud,textoAMostrar,url=""){
             this.latitud=latitud;
             this.longitud=longitud;
             this.textoAMostrar=textoAMostrar;
+            this.url=url;
         }
     }
     class ListaDeDatosMapa{
         constructor(){
             this.lista=[];
         }
-        add(latitud,longitud,textoAMostrar){
-            this.lista.push(new PuntoEnElMapa(latitud,longitud,textoAMostrar))
+        add(latitud,longitud,textoAMostrar,url=""){
+            this.lista.push(new PuntoEnElMapa(latitud,longitud,textoAMostrar,url))
         }
     }
 
@@ -32,7 +36,7 @@
 
 
      {% for punto in listaPuntos %}
-       LM.add({{ punto.latitud|numeroConComa}},{{ punto.longitud|numeroConComa }},"{{ punto.textoAMostrar }}");
+       LM.add({{ punto.latitud|numeroConComa}},{{ punto.longitud|numeroConComa }},"{{ punto.textoAMostrar }}" {% if punto.url %},"{{ punto.url }}"{% endif %});
      {% endfor %}
 
     var mostrarMapaOffLine=true;
@@ -55,6 +59,8 @@ for (let i = 0; i < LM.lista.length; i++) {
     "properties": {
       "name": e.textoAMostrar//"otra2"
       ,"value":e.textoAMostrar//"valor"
+        ,"url":e.url//
+
     },
     "geometry": {
       "type": "Point",//longitud latitud
@@ -111,16 +117,34 @@ var pointSeries = chart.series.push(
     geoJSON: cities
   })
 );
+var bulletTemplate = am5.Template.new(root, {});
 
-pointSeries.bullets.push(function() {
+
+
+bulletTemplate.events.on("click", function(ev) {
+    //console.log(ev.target.dataItem.dataContext.url);
+  //console.log("Clicked on a bullet!", ev.target._settings.url);
+  var form = document.getElementById("myFormIr");
+  form.action = ev.target.dataItem.dataContext.url;
+  form.submit();
+});
+
+pointSeries.bullets.push(function(a,b) {
+    console.log(a);
+    console.log(b);
   return am5.Bullet.new(root, {
     sprite: am5.Circle.new(root, {
       radius: 5,
       fill: am5.color(0xffba00)
       , tooltipText: "{name}"//"{name}: {value}"
-    })
+        ,url:"{url}"
+    }
+    ,bulletTemplate
+    )
   });
 });
+
+
 
 chart.set("zoomControl", am5map.ZoomControl.new(root, {}));
 
